fixed server issues + back button